tests/baselines/reference/assignFromNumberInterface.errors.txt
tests/cases/conformance/types/primitives/number/assignFromNumberInterface.ts(3,1): error TS2322: Type 'Number' is not assignable to type '数字'.
  '数字' is a primitive, but 'Number' is a wrapper object. Prefer using '数字' when possible.


==== tests/cases/conformance/types/primitives/number/assignFromNumberInterface.ts (1 errors) ====
    var x = 1;
    var a: Number;
    x = a;
    ~
!!! error TS2322: Type 'Number' is not assignable to type '数字'.
!!! error TS2322:   '数字' is a primitive, but 'Number' is a wrapper object. Prefer using '数字' when possible.
    a = x;